--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -306,6 +306,13 @@
                                 </a>
                             </li>
 
+							<li>
+								<a href="{{ path('zectranet_upload') }}">
+									<i class="fa fa-upload fa-fw"></i>
+									Upload Files
+								</a>
+							</li>
+
 							{#
 							<li>
 								<a href="{{ path('intranet_show_personal_page') }}">
