--- a/web/bundles/zectranet/templates/chat.html
+++ b/web/bundles/zectranet/templates/chat.html
@@ -19,9 +19,7 @@
                 </small>
             </div>
             <pre style="white-space: pre-line;">
-                <span>
-                    [[ post.message ]]
-                </span>
+                <span ng-bind-html="[[ post.message ]]"></span>
             </pre>
         </div>
     </li>
