--- a/src/ZectranetBundle/Resources/views/layout.html.twig
+++ b/src/ZectranetBundle/Resources/views/layout.html.twig
@@ -22,6 +22,7 @@
         <link href="{{ asset('bundles/zectranet/css/clock.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('bundles/zectranet/css/search.css') }}" rel="stylesheet" type="text/css">
         <link href="{{ asset('bundles/zectranet/css/angular-busy.css') }}" rel="stylesheet" type="text/css">
+        <link href="{{ asset('bundles/zectranet/css/lightbox.css') }}" rel="stylesheet" type="text/css">
     {% endblock %}
 
 	{% block head %}
@@ -577,6 +578,7 @@
 	<script src="{{ asset('bundles/zectranet/js/Bootstrap/bootstrap_ench_dropdowns.js') }}"></script>
 
 	<script src="{{ asset('bundles/zectranet/js/custom/angular-core.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/zectranet/js/lightbox.min.js') }}"></script>
 
 	{#<script src="{{ asset('bundles/zectranet/js/custom/navigation.js') }}" type="text/javascript"></script>#}
 	{#<script src="{{ asset('bundles/zectranet/js/custom/CustomJavaScripts.js') }}"></script>#}
