--- a/src/ZectranetBundle/Resources/views/userProfile.html.twig
+++ b/src/ZectranetBundle/Resources/views/userProfile.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="page-header">
         <i class="fa fa-user fa-2x"></i>
-        <span style="font-size: 25px;">Profile Page</span>
+        <span style="font-size: 25px;"> User </span>
     </div>
 
     <div class="row">
