--- a/web/bundles/zectranet/css/style.css
+++ b/web/bundles/zectranet/css/style.css
@@ -52,12 +52,12 @@
 .file-list
 {
     list-style: none;
-    margin: 0 3%;
 }
 
 .file-list li
 {
     transition: 0.05s linear all;
+    width: 31%;
     display: inline-block;
     margin: 10px 10px;
     opacity: 0.7;
